--- a/User.Identity/User.Identity.csproj
+++ b/User.Identity/User.Identity.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4" Version="4.0.4" />
+    <PackageReference Include="DnsClient" Version="1.3.2" />
+    <PackageReference Include="IdentityServer4" Version="3.1.4" />
   </ItemGroup>
 
 
