--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,11 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-           // "program": "${workspaceFolder}/User.Identity/bin/Debug/netcoreapp3.1/User.Identity.dll",
-            "program": "${workspaceFolder}/Contact.API/bin/Debug/netcoreapp3.1/Contact.API.dll",
+            //"program": "${workspaceFolder}/User.Identity/bin/Debug/netcoreapp3.1/User.Identity.dll",
+            //"program": "${workspaceFolder}/Contact.API/bin/Debug/netcoreapp3.1/Contact.API.dll",
+            "program": "${workspaceFolder}/User.Api/bin/Debug/netcoreapp3.1/User.Api.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Contact.API",
+            "cwd": "${workspaceFolder}/User.Api",
             "stopAtEntry": false,
             "serverReadyAction": {
                 "action": "openExternally",
