--- a/Contact.API/Contact.API.csproj
+++ b/Contact.API/Contact.API.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetCore.CAP" Version="3.0.4" />
+    <PackageReference Include="DotNetCore.CAP.MySql" Version="3.0.4" />
+    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="3.0.4" />
+    <PackageReference Include="DotNetCore.CAP.Dashboard" Version="3.0.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.1" />
     <PackageReference Include="Polly" Version="5.8.0" />
     <PackageReference Include="DnsClient" Version="1.3.2" />
