--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,17 +5,74 @@
     "version": "0.2.0",
     "configurations": [
 
+        // {
+        //     "name": ".NET Core Launch (web)",
+        //     "type": "coreclr",
+        //     "request": "launch",
+        //     "preLaunchTask": "build",
+        //     "program": "${workspaceFolder}/Project/Project.API/bin/Debug/netcoreapp3.1/Project.API.dll",
+        //     "args": [],
+        //     "cwd": "${workspaceFolder}/Project/Project.API",
+        //     "stopAtEntry": false,
+        //     "serverReadyAction": {
+        //         "action": "openExternally",
+        //         "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+        //     },
+        //     "env": {
+        //         "ASPNETCORE_ENVIRONMENT": "Development"
+        //     },
+        //     "sourceFileMap": {
+        //         "/Views": "${workspaceFolder}/Views"
+        //     }
+        // },
+        // {
+        //     "name": ".NET Core Launch (web)",
+        //     "type": "coreclr",
+        //     "request": "launch",
+        //     "preLaunchTask": "build",
+        //     "program": "${workspaceFolder}/User.Api/bin/Debug/netcoreapp3.1/User.Api.dll",
+        //     "args": [],
+        //     "cwd": "${workspaceFolder}/User.APi",
+        //     "stopAtEntry": false,
+        //     "serverReadyAction": {
+        //         "action": "openExternally",
+        //         "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+        //     },
+        //     "env": {
+        //         "ASPNETCORE_ENVIRONMENT": "Development"
+        //     },
+        //     "sourceFileMap": {
+        //         "/Views": "${workspaceFolder}/Views"
+        //     }
+        // },
+        // {
+        //     "name": ".NET Core Launch (web)",
+        //     "type": "coreclr",
+        //     "request": "launch",
+        //     "preLaunchTask": "build",
+        //     "program": "${workspaceFolder}/Contact.API/bin/Debug/netcoreapp3.1/Contact.API.dll",
+        //     "args": [],
+        //     "cwd": "${workspaceFolder}/Contact.API",
+        //     "stopAtEntry": false,
+        //     "serverReadyAction": {
+        //         "action": "openExternally",
+        //         "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+        //     },
+        //     "env": {
+        //         "ASPNETCORE_ENVIRONMENT": "Development"
+        //     },
+        //     "sourceFileMap": {
+        //         "/Views": "${workspaceFolder}/Views"
+        //     }
+        // },
         {
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            //"program": "${workspaceFolder}/User.Identity/bin/Debug/netcoreapp3.1/User.Identity.dll",
-            //"program": "${workspaceFolder}/Contact.API/bin/Debug/netcoreapp3.1/Contact.API.dll",
-            //"program": "${workspaceFolder}/User.Api/bin/Debug/netcoreapp3.1/User.Api.dll",
-            "program": "${workspaceFolder}/Project/Project.API/bin/Debug/netcoreapp3.1/Project.API.dll",
+            "program": "${workspaceFolder}/Recommend.API/bin/Debug/netcoreapp3.1/Recommend.API.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Project/Project.API",
+            "cwd": "${workspaceFolder}/Recommend.API",
             "stopAtEntry": false,
             "serverReadyAction": {
                 "action": "openExternally",
@@ -28,6 +85,46 @@
                 "/Views": "${workspaceFolder}/Views"
             }
         },
+        // {
+        //     "name": ".NET Core Launch (web)",
+        //     "type": "coreclr",
+        //     "request": "launch",
+        //     "preLaunchTask": "build",
+        //     "program": "${workspaceFolder}/GetWay.API/bin/Debug/netcoreapp3.1/GetWay.API.dll",
+        //     "args": [],
+        //     "cwd": "${workspaceFolder}/GetWay.API",
+        //     "stopAtEntry": false,
+        //     "serverReadyAction": {
+        //         "action": "openExternally",
+        //         "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+        //     },
+        //     "env": {
+        //         "ASPNETCORE_ENVIRONMENT": "Development"
+        //     },
+        //     "sourceFileMap": {
+        //         "/Views": "${workspaceFolder}/Views"
+        //     }
+        // },
+        // {
+        //     "name": ".NET Core Launch (web)",
+        //     "type": "coreclr",
+        //     "request": "launch",
+        //     "preLaunchTask": "build",
+        //     "program": "${workspaceFolder}/User.Identity/bin/Debug/netcoreapp3.1/User.Identity.dll",
+        //     "args": [],
+        //     "cwd": "${workspaceFolder}/User.Identity",
+        //     "stopAtEntry": false,
+        //     "serverReadyAction": {
+        //         "action": "openExternally",
+        //         "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+        //     },
+        //     "env": {
+        //         "ASPNETCORE_ENVIRONMENT": "Development"
+        //     },
+        //     "sourceFileMap": {
+        //         "/Views": "${workspaceFolder}/Views"
+        //     }
+        // },
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
