--- a/User.Api/appsettings.Development.json
+++ b/User.Api/appsettings.Development.json
@@ -9,5 +9,22 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "MySqlUser": "server=10.211.55.5;port=3306;database=beta_user;userid=yasin;password=admin123"
+    },
+    "Serilog": {
+        "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+        "MinimumLevel": "Trace",
+        "WriteTo": [
+            { "Name": "Console" }
+        ],
+        "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+        "Destructure": [
+            { "Name": "With", "Args": { "policy": "Sample.CustomPolicy, Sample" } },
+            { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
+            { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
+            { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
+        ],
+        "Properties": {
+            "Application": "userapi"
+        }
     }
 }
