--- a/User.Api/appsettings.json
+++ b/User.Api/appsettings.json
@@ -19,5 +19,22 @@
                 "Port": 8600
             }
         }
+    },
+    "Serilog": {
+        "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+        "MinimumLevel": "Debug",
+        "WriteTo": [
+            { "Name": "Console" }
+        ],
+        "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+        "Destructure": [
+            { "Name": "With", "Args": { "policy": "Sample.CustomPolicy, Sample" } },
+            { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
+            { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
+            { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
+        ],
+        "Properties": {
+            "Application": "userapi"
+        }
     }
 }
