--- a/User.Api/appsettings.json
+++ b/User.Api/appsettings.json
@@ -8,7 +8,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MySqlUser": "server=db;port=3306;database=beta_user;userid=yasin;password=admin123"
+        "MySqlUser": "server=10.211.55.5;port=3306;database=beta_user;userid=yasin;password=admin123"
     },
     "ServiceDiscovery": {
         "ServiceName": "userapi",
@@ -22,13 +22,12 @@
     },
     "Serilog": {
         "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
-        "MinimumLevel": "Debug",
+        "MinimumLevel": "Verbose",
         "WriteTo": [
             { "Name": "Console" }
         ],
         "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
         "Destructure": [
-            { "Name": "With", "Args": { "policy": "Sample.CustomPolicy, Sample" } },
             { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
             { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
             { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
