--- a/User.Api/appsettings.Development.json
+++ b/User.Api/appsettings.Development.json
@@ -12,13 +12,12 @@
     },
     "Serilog": {
         "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
-        "MinimumLevel": "Trace",
+        "MinimumLevel": "Verbose",
         "WriteTo": [
             { "Name": "Console" }
         ],
         "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
         "Destructure": [
-            { "Name": "With", "Args": { "policy": "Sample.CustomPolicy, Sample" } },
             { "Name": "ToMaximumDepth", "Args": { "maximumDestructuringDepth": 4 } },
             { "Name": "ToMaximumStringLength", "Args": { "maximumStringLength": 100 } },
             { "Name": "ToMaximumCollectionCount", "Args": { "maximumCollectionCount": 10 } }
