--- a/User.Identity/User.Identity.csproj
+++ b/User.Identity/User.Identity.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.7" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Polly" Version="5.8.0" />
+    <PackageReference Include="zipkin4net" Version="1.5.0" />
+    <PackageReference Include="zipkin4net.middleware.aspnetcore" Version="1.5.0" />
   </ItemGroup>
 
   <ItemGroup>
